--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <button id = "divided">/</button>
                 <button id = "equal">=</button>
                 <button id ="C">C</button>
+                <button id = 'dot'>.</button>
+                <button id = 'back'>Backspace</button>
             </div>
         </div>
 
